_build/parser.output
   0  $accept : %entry% $end

   1  main : top_expr EOF

   2  top_expr : expr_seq

   3  expr_seq : expression
   4           | expr_seq SCOLON expr_seq

   5  expression : INT
   6             | TRUE
   7             | FALSE
   8             | VAR
   9             | UNIT
  10             | LPAREN expr_seq RPAREN
  11             | BEGIN expr_seq END
  12             | expression PLUS expression
  13             | expression TIMES expression
  14             | expression MINUS expression
  15             | expression DIV expression
  16             | expression MOD expression
  17             | MINUS expression
  18             | expression L expression
  19             | expression LE expression
  20             | expression G expression
  21             | expression GE expression
  22             | expression EQ expression
  23             | expression NE expression
  24             | expression OR expression
  25             | expression AND expression
  26             | NOT expression
  27             | IF expression THEN expression ELSE expression
  28             | LET declaration groupe_decla expr_seq
  29             | LET REC declaration groupe_decla expr_seq
  30             | expression REVAL expression
  31             | expression COMMA expression
  32             | E expression
  33             | RAISE expression
  34             | TRY expr_seq WITH expression FLECHE expr_seq
  35             | EXCL sexpr
  36             | REF sexpr
  37             | INCR sexpr
  38             | DECR sexpr
  39             | FST sexpr
  40             | SND sexpr
  41             | PRINT sexpr
  42             | func
  43             | applic
  44             | expression CONS expression
  45             | EMPTYLIST
  46             | LLIST liste
  47             | MATCH expression WITH pattern

  48  motif : motif COMMA motif
  49        | VAR
  50        | UNDERSCORE
  51        | UNIT
  52        | motif CONS motif
  53        | EMPTYLIST

  54  sexpr : LPAREN expr_seq RPAREN
  55        | VAR
  56        | INT
  57        | TRUE
  58        | FALSE
  59        | EXCL sexpr
  60        | UNIT

  61  func : VAR corps_func
  62       | FUN corps_func

  63  corps_func : motif corps_func
  64             | motif EQ expr_seq
  65             | motif FLECHE expr_seq

  66  applic : applic sexpr
  67         | sexpr sexpr

  68  groupe_decla : IN
  69               | DSCOLON

  70  declaration : motif corps_func
  71              | motif EQ expression

  72  liste : expression SCOLON liste
  73        | expression RLIST

  74  pattern : PIPE pattern
  75          | motif FLECHE expr_seq PIPE pattern
  76          | motif FLECHE expr_seq

  77  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (77)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	BEGIN  shift 7
	IF  shift 8
	LET  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NOT  shift 12
	PRINT  shift 13
	FUN  shift 14
	UNIT  shift 15
	REF  shift 16
	EXCL  shift 17
	E  shift 18
	RAISE  shift 19
	TRY  shift 20
	MATCH  shift 21
	INCR  shift 22
	DECR  shift 23
	FST  shift 24
	SND  shift 25
	LLIST  shift 26
	EMPTYLIST  shift 27
	.  error

	main  goto 28
	top_expr  goto 29
	expr_seq  goto 30
	expression  goto 31
	sexpr  goto 32
	func  goto 33
	applic  goto 34


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	expression : INT .  (5)
	sexpr : INT .  (56)

	INT  reduce 56
	VAR  reduce 56
	PLUS  reduce 5
	TIMES  reduce 5
	MINUS  reduce 5
	DIV  reduce 5
	MOD  reduce 5
	LPAREN  reduce 56
	RPAREN  reduce 5
	END  reduce 5
	EOF  reduce 5
	L  reduce 5
	LE  reduce 5
	G  reduce 5
	GE  reduce 5
	NE  reduce 5
	EQ  reduce 5
	THEN  reduce 5
	ELSE  reduce 5
	IN  reduce 5
	TRUE  reduce 56
	FALSE  reduce 56
	AND  reduce 5
	OR  reduce 5
	FLECHE  reduce 5
	SCOLON  reduce 5
	DSCOLON  reduce 5
	UNIT  reduce 56
	EXCL  reduce 56
	REVAL  reduce 5
	WITH  reduce 5
	PIPE  reduce 5
	COMMA  reduce 5
	RLIST  reduce 5
	CONS  reduce 5


state 4
	expression : VAR .  (8)
	sexpr : VAR .  (55)
	func : VAR . corps_func  (61)

	UNDERSCORE  shift 37
	EMPTYLIST  shift 38
	INT  reduce 55
	VAR  reduce 55
	PLUS  reduce 8
	TIMES  reduce 8
	MINUS  reduce 8
	DIV  reduce 8
	MOD  reduce 8
	LPAREN  reduce 55
	RPAREN  reduce 8
	END  reduce 8
	EOF  reduce 8
	L  reduce 8
	LE  reduce 8
	G  reduce 8
	GE  reduce 8
	NE  reduce 8
	EQ  reduce 8
	THEN  reduce 8
	ELSE  reduce 8
	IN  reduce 8
	TRUE  reduce 55
	FALSE  reduce 55
	AND  reduce 8
	OR  reduce 8
	FLECHE  reduce 8
	SCOLON  reduce 8
	DSCOLON  reduce 8
	UNIT  reduce 55
	EXCL  reduce 55
	REVAL  reduce 8
	WITH  reduce 8
	PIPE  reduce 8
	COMMA  reduce 8
	RLIST  reduce 8
	CONS  reduce 8

	motif  goto 39
	corps_func  goto 40


state 5
	expression : MINUS . expression  (17)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	BEGIN  shift 7
	IF  shift 8
	LET  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NOT  shift 12
	PRINT  shift 13
	FUN  shift 14
	UNIT  shift 15
	REF  shift 16
	EXCL  shift 17
	E  shift 18
	RAISE  shift 19
	TRY  shift 20
	MATCH  shift 21
	INCR  shift 22
	DECR  shift 23
	FST  shift 24
	SND  shift 25
	LLIST  shift 26
	EMPTYLIST  shift 27
	.  error

	expression  goto 41
	sexpr  goto 32
	func  goto 33
	applic  goto 34


state 6
	expression : LPAREN . expr_seq RPAREN  (10)
	sexpr : LPAREN . expr_seq RPAREN  (54)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	BEGIN  shift 7
	IF  shift 8
	LET  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NOT  shift 12
	PRINT  shift 13
	FUN  shift 14
	UNIT  shift 15
	REF  shift 16
	EXCL  shift 17
	E  shift 18
	RAISE  shift 19
	TRY  shift 20
	MATCH  shift 21
	INCR  shift 22
	DECR  shift 23
	FST  shift 24
	SND  shift 25
	LLIST  shift 26
	EMPTYLIST  shift 27
	.  error

	expr_seq  goto 42
	expression  goto 31
	sexpr  goto 32
	func  goto 33
	applic  goto 34


state 7
	expression : BEGIN . expr_seq END  (11)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	BEGIN  shift 7
	IF  shift 8
	LET  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NOT  shift 12
	PRINT  shift 13
	FUN  shift 14
	UNIT  shift 15
	REF  shift 16
	EXCL  shift 17
	E  shift 18
	RAISE  shift 19
	TRY  shift 20
	MATCH  shift 21
	INCR  shift 22
	DECR  shift 23
	FST  shift 24
	SND  shift 25
	LLIST  shift 26
	EMPTYLIST  shift 27
	.  error

	expr_seq  goto 43
	expression  goto 31
	sexpr  goto 32
	func  goto 33
	applic  goto 34


state 8
	expression : IF . expression THEN expression ELSE expression  (27)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	BEGIN  shift 7
	IF  shift 8
	LET  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NOT  shift 12
	PRINT  shift 13
	FUN  shift 14
	UNIT  shift 15
	REF  shift 16
	EXCL  shift 17
	E  shift 18
	RAISE  shift 19
	TRY  shift 20
	MATCH  shift 21
	INCR  shift 22
	DECR  shift 23
	FST  shift 24
	SND  shift 25
	LLIST  shift 26
	EMPTYLIST  shift 27
	.  error

	expression  goto 44
	sexpr  goto 32
	func  goto 33
	applic  goto 34


state 9
	expression : LET . declaration groupe_decla expr_seq  (28)
	expression : LET . REC declaration groupe_decla expr_seq  (29)

	VAR  shift 35
	REC  shift 45
	UNIT  shift 36
	UNDERSCORE  shift 37
	EMPTYLIST  shift 38
	.  error

	declaration  goto 46
	motif  goto 47


state 10
	expression : TRUE .  (6)
	sexpr : TRUE .  (57)

	INT  reduce 57
	VAR  reduce 57
	PLUS  reduce 6
	TIMES  reduce 6
	MINUS  reduce 6
	DIV  reduce 6
	MOD  reduce 6
	LPAREN  reduce 57
	RPAREN  reduce 6
	END  reduce 6
	EOF  reduce 6
	L  reduce 6
	LE  reduce 6
	G  reduce 6
	GE  reduce 6
	NE  reduce 6
	EQ  reduce 6
	THEN  reduce 6
	ELSE  reduce 6
	IN  reduce 6
	TRUE  reduce 57
	FALSE  reduce 57
	AND  reduce 6
	OR  reduce 6
	FLECHE  reduce 6
	SCOLON  reduce 6
	DSCOLON  reduce 6
	UNIT  reduce 57
	EXCL  reduce 57
	REVAL  reduce 6
	WITH  reduce 6
	PIPE  reduce 6
	COMMA  reduce 6
	RLIST  reduce 6
	CONS  reduce 6


state 11
	expression : FALSE .  (7)
	sexpr : FALSE .  (58)

	INT  reduce 58
	VAR  reduce 58
	PLUS  reduce 7
	TIMES  reduce 7
	MINUS  reduce 7
	DIV  reduce 7
	MOD  reduce 7
	LPAREN  reduce 58
	RPAREN  reduce 7
	END  reduce 7
	EOF  reduce 7
	L  reduce 7
	LE  reduce 7
	G  reduce 7
	GE  reduce 7
	NE  reduce 7
	EQ  reduce 7
	THEN  reduce 7
	ELSE  reduce 7
	IN  reduce 7
	TRUE  reduce 58
	FALSE  reduce 58
	AND  reduce 7
	OR  reduce 7
	FLECHE  reduce 7
	SCOLON  reduce 7
	DSCOLON  reduce 7
	UNIT  reduce 58
	EXCL  reduce 58
	REVAL  reduce 7
	WITH  reduce 7
	PIPE  reduce 7
	COMMA  reduce 7
	RLIST  reduce 7
	CONS  reduce 7


state 12
	expression : NOT . expression  (26)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	BEGIN  shift 7
	IF  shift 8
	LET  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NOT  shift 12
	PRINT  shift 13
	FUN  shift 14
	UNIT  shift 15
	REF  shift 16
	EXCL  shift 17
	E  shift 18
	RAISE  shift 19
	TRY  shift 20
	MATCH  shift 21
	INCR  shift 22
	DECR  shift 23
	FST  shift 24
	SND  shift 25
	LLIST  shift 26
	EMPTYLIST  shift 27
	.  error

	expression  goto 48
	sexpr  goto 32
	func  goto 33
	applic  goto 34


state 13
	expression : PRINT . sexpr  (41)

	INT  shift 49
	VAR  shift 50
	LPAREN  shift 51
	TRUE  shift 52
	FALSE  shift 53
	UNIT  shift 54
	EXCL  shift 55
	.  error

	sexpr  goto 56


state 14
	func : FUN . corps_func  (62)

	VAR  shift 35
	UNIT  shift 36
	UNDERSCORE  shift 37
	EMPTYLIST  shift 38
	.  error

	motif  goto 39
	corps_func  goto 57


state 15
	expression : UNIT .  (9)
	sexpr : UNIT .  (60)

	INT  reduce 60
	VAR  reduce 60
	PLUS  reduce 9
	TIMES  reduce 9
	MINUS  reduce 9
	DIV  reduce 9
	MOD  reduce 9
	LPAREN  reduce 60
	RPAREN  reduce 9
	END  reduce 9
	EOF  reduce 9
	L  reduce 9
	LE  reduce 9
	G  reduce 9
	GE  reduce 9
	NE  reduce 9
	EQ  reduce 9
	THEN  reduce 9
	ELSE  reduce 9
	IN  reduce 9
	TRUE  reduce 60
	FALSE  reduce 60
	AND  reduce 9
	OR  reduce 9
	FLECHE  reduce 9
	SCOLON  reduce 9
	DSCOLON  reduce 9
	UNIT  reduce 60
	EXCL  reduce 60
	REVAL  reduce 9
	WITH  reduce 9
	PIPE  reduce 9
	COMMA  reduce 9
	RLIST  reduce 9
	CONS  reduce 9


state 16
	expression : REF . sexpr  (36)

	INT  shift 49
	VAR  shift 50
	LPAREN  shift 51
	TRUE  shift 52
	FALSE  shift 53
	UNIT  shift 54
	EXCL  shift 55
	.  error

	sexpr  goto 58


state 17
	expression : EXCL . sexpr  (35)
	sexpr : EXCL . sexpr  (59)

	INT  shift 49
	VAR  shift 50
	LPAREN  shift 51
	TRUE  shift 52
	FALSE  shift 53
	UNIT  shift 54
	EXCL  shift 55
	.  error

	sexpr  goto 59


state 18
	expression : E . expression  (32)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	BEGIN  shift 7
	IF  shift 8
	LET  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NOT  shift 12
	PRINT  shift 13
	FUN  shift 14
	UNIT  shift 15
	REF  shift 16
	EXCL  shift 17
	E  shift 18
	RAISE  shift 19
	TRY  shift 20
	MATCH  shift 21
	INCR  shift 22
	DECR  shift 23
	FST  shift 24
	SND  shift 25
	LLIST  shift 26
	EMPTYLIST  shift 27
	.  error

	expression  goto 60
	sexpr  goto 32
	func  goto 33
	applic  goto 34


state 19
	expression : RAISE . expression  (33)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	BEGIN  shift 7
	IF  shift 8
	LET  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NOT  shift 12
	PRINT  shift 13
	FUN  shift 14
	UNIT  shift 15
	REF  shift 16
	EXCL  shift 17
	E  shift 18
	RAISE  shift 19
	TRY  shift 20
	MATCH  shift 21
	INCR  shift 22
	DECR  shift 23
	FST  shift 24
	SND  shift 25
	LLIST  shift 26
	EMPTYLIST  shift 27
	.  error

	expression  goto 61
	sexpr  goto 32
	func  goto 33
	applic  goto 34


state 20
	expression : TRY . expr_seq WITH expression FLECHE expr_seq  (34)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	BEGIN  shift 7
	IF  shift 8
	LET  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NOT  shift 12
	PRINT  shift 13
	FUN  shift 14
	UNIT  shift 15
	REF  shift 16
	EXCL  shift 17
	E  shift 18
	RAISE  shift 19
	TRY  shift 20
	MATCH  shift 21
	INCR  shift 22
	DECR  shift 23
	FST  shift 24
	SND  shift 25
	LLIST  shift 26
	EMPTYLIST  shift 27
	.  error

	expr_seq  goto 62
	expression  goto 31
	sexpr  goto 32
	func  goto 33
	applic  goto 34


state 21
	expression : MATCH . expression WITH pattern  (47)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	BEGIN  shift 7
	IF  shift 8
	LET  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NOT  shift 12
	PRINT  shift 13
	FUN  shift 14
	UNIT  shift 15
	REF  shift 16
	EXCL  shift 17
	E  shift 18
	RAISE  shift 19
	TRY  shift 20
	MATCH  shift 21
	INCR  shift 22
	DECR  shift 23
	FST  shift 24
	SND  shift 25
	LLIST  shift 26
	EMPTYLIST  shift 27
	.  error

	expression  goto 63
	sexpr  goto 32
	func  goto 33
	applic  goto 34


state 22
	expression : INCR . sexpr  (37)

	INT  shift 49
	VAR  shift 50
	LPAREN  shift 51
	TRUE  shift 52
	FALSE  shift 53
	UNIT  shift 54
	EXCL  shift 55
	.  error

	sexpr  goto 64


state 23
	expression : DECR . sexpr  (38)

	INT  shift 49
	VAR  shift 50
	LPAREN  shift 51
	TRUE  shift 52
	FALSE  shift 53
	UNIT  shift 54
	EXCL  shift 55
	.  error

	sexpr  goto 65


state 24
	expression : FST . sexpr  (39)

	INT  shift 49
	VAR  shift 50
	LPAREN  shift 51
	TRUE  shift 52
	FALSE  shift 53
	UNIT  shift 54
	EXCL  shift 55
	.  error

	sexpr  goto 66


state 25
	expression : SND . sexpr  (40)

	INT  shift 49
	VAR  shift 50
	LPAREN  shift 51
	TRUE  shift 52
	FALSE  shift 53
	UNIT  shift 54
	EXCL  shift 55
	.  error

	sexpr  goto 67


state 26
	expression : LLIST . liste  (46)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	BEGIN  shift 7
	IF  shift 8
	LET  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NOT  shift 12
	PRINT  shift 13
	FUN  shift 14
	UNIT  shift 15
	REF  shift 16
	EXCL  shift 17
	E  shift 18
	RAISE  shift 19
	TRY  shift 20
	MATCH  shift 21
	INCR  shift 22
	DECR  shift 23
	FST  shift 24
	SND  shift 25
	LLIST  shift 26
	EMPTYLIST  shift 27
	.  error

	expression  goto 68
	sexpr  goto 32
	func  goto 33
	applic  goto 34
	liste  goto 69


state 27
	expression : EMPTYLIST .  (45)

	.  reduce 45


state 28
	%entry% : '\001' main .  (77)

	.  reduce 77


state 29
	main : top_expr . EOF  (1)

	EOF  shift 70
	.  error


state 30
	top_expr : expr_seq .  (2)
	expr_seq : expr_seq . SCOLON expr_seq  (4)

	SCOLON  shift 71
	EOF  reduce 2


state 31
	expr_seq : expression .  (3)
	expression : expression . PLUS expression  (12)
	expression : expression . TIMES expression  (13)
	expression : expression . MINUS expression  (14)
	expression : expression . DIV expression  (15)
	expression : expression . MOD expression  (16)
	expression : expression . L expression  (18)
	expression : expression . LE expression  (19)
	expression : expression . G expression  (20)
	expression : expression . GE expression  (21)
	expression : expression . EQ expression  (22)
	expression : expression . NE expression  (23)
	expression : expression . OR expression  (24)
	expression : expression . AND expression  (25)
	expression : expression . REVAL expression  (30)
	expression : expression . COMMA expression  (31)
	expression : expression . CONS expression  (44)

	PLUS  shift 72
	TIMES  shift 73
	MINUS  shift 74
	DIV  shift 75
	MOD  shift 76
	L  shift 77
	LE  shift 78
	G  shift 79
	GE  shift 80
	NE  shift 81
	EQ  shift 82
	AND  shift 83
	OR  shift 84
	REVAL  shift 85
	COMMA  shift 86
	CONS  shift 87
	RPAREN  reduce 3
	END  reduce 3
	EOF  reduce 3
	THEN  reduce 3
	ELSE  reduce 3
	IN  reduce 3
	FLECHE  reduce 3
	SCOLON  reduce 3
	DSCOLON  reduce 3
	WITH  reduce 3
	PIPE  reduce 3
	RLIST  reduce 3


state 32
	applic : sexpr . sexpr  (67)

	INT  shift 49
	VAR  shift 50
	LPAREN  shift 51
	TRUE  shift 52
	FALSE  shift 53
	UNIT  shift 54
	EXCL  shift 55
	.  error

	sexpr  goto 88


state 33
	expression : func .  (42)

	.  reduce 42


state 34
	expression : applic .  (43)
	applic : applic . sexpr  (66)

	INT  shift 49
	VAR  shift 50
	LPAREN  shift 51
	TRUE  shift 52
	FALSE  shift 53
	UNIT  shift 54
	EXCL  shift 55
	PLUS  reduce 43
	TIMES  reduce 43
	MINUS  reduce 43
	DIV  reduce 43
	MOD  reduce 43
	RPAREN  reduce 43
	END  reduce 43
	EOF  reduce 43
	L  reduce 43
	LE  reduce 43
	G  reduce 43
	GE  reduce 43
	NE  reduce 43
	EQ  reduce 43
	THEN  reduce 43
	ELSE  reduce 43
	IN  reduce 43
	AND  reduce 43
	OR  reduce 43
	FLECHE  reduce 43
	SCOLON  reduce 43
	DSCOLON  reduce 43
	REVAL  reduce 43
	WITH  reduce 43
	PIPE  reduce 43
	COMMA  reduce 43
	RLIST  reduce 43
	CONS  reduce 43

	sexpr  goto 89


state 35
	motif : VAR .  (49)

	.  reduce 49


state 36
	motif : UNIT .  (51)

	.  reduce 51


state 37
	motif : UNDERSCORE .  (50)

	.  reduce 50


state 38
	motif : EMPTYLIST .  (53)

	.  reduce 53


state 39
	motif : motif . COMMA motif  (48)
	motif : motif . CONS motif  (52)
	corps_func : motif . corps_func  (63)
	corps_func : motif . EQ expr_seq  (64)
	corps_func : motif . FLECHE expr_seq  (65)

	VAR  shift 35
	EQ  shift 90
	FLECHE  shift 91
	UNIT  shift 36
	UNDERSCORE  shift 37
	COMMA  shift 92
	EMPTYLIST  shift 38
	CONS  shift 93
	.  error

	motif  goto 39
	corps_func  goto 94


state 40
	func : VAR corps_func .  (61)

	.  reduce 61


state 41
	expression : expression . PLUS expression  (12)
	expression : expression . TIMES expression  (13)
	expression : expression . MINUS expression  (14)
	expression : expression . DIV expression  (15)
	expression : expression . MOD expression  (16)
	expression : MINUS expression .  (17)
	expression : expression . L expression  (18)
	expression : expression . LE expression  (19)
	expression : expression . G expression  (20)
	expression : expression . GE expression  (21)
	expression : expression . EQ expression  (22)
	expression : expression . NE expression  (23)
	expression : expression . OR expression  (24)
	expression : expression . AND expression  (25)
	expression : expression . REVAL expression  (30)
	expression : expression . COMMA expression  (31)
	expression : expression . CONS expression  (44)

	COMMA  shift 86
	PLUS  reduce 17
	TIMES  reduce 17
	MINUS  reduce 17
	DIV  reduce 17
	MOD  reduce 17
	RPAREN  reduce 17
	END  reduce 17
	EOF  reduce 17
	L  reduce 17
	LE  reduce 17
	G  reduce 17
	GE  reduce 17
	NE  reduce 17
	EQ  reduce 17
	THEN  reduce 17
	ELSE  reduce 17
	IN  reduce 17
	AND  reduce 17
	OR  reduce 17
	FLECHE  reduce 17
	SCOLON  reduce 17
	DSCOLON  reduce 17
	REVAL  reduce 17
	WITH  reduce 17
	PIPE  reduce 17
	RLIST  reduce 17
	CONS  reduce 17


state 42
	expr_seq : expr_seq . SCOLON expr_seq  (4)
	expression : LPAREN expr_seq . RPAREN  (10)
	sexpr : LPAREN expr_seq . RPAREN  (54)

	RPAREN  shift 95
	SCOLON  shift 71
	.  error


state 43
	expr_seq : expr_seq . SCOLON expr_seq  (4)
	expression : BEGIN expr_seq . END  (11)

	END  shift 96
	SCOLON  shift 71
	.  error


state 44
	expression : expression . PLUS expression  (12)
	expression : expression . TIMES expression  (13)
	expression : expression . MINUS expression  (14)
	expression : expression . DIV expression  (15)
	expression : expression . MOD expression  (16)
	expression : expression . L expression  (18)
	expression : expression . LE expression  (19)
	expression : expression . G expression  (20)
	expression : expression . GE expression  (21)
	expression : expression . EQ expression  (22)
	expression : expression . NE expression  (23)
	expression : expression . OR expression  (24)
	expression : expression . AND expression  (25)
	expression : IF expression . THEN expression ELSE expression  (27)
	expression : expression . REVAL expression  (30)
	expression : expression . COMMA expression  (31)
	expression : expression . CONS expression  (44)

	PLUS  shift 72
	TIMES  shift 73
	MINUS  shift 74
	DIV  shift 75
	MOD  shift 76
	L  shift 77
	LE  shift 78
	G  shift 79
	GE  shift 80
	NE  shift 81
	EQ  shift 82
	THEN  shift 97
	AND  shift 83
	OR  shift 84
	REVAL  shift 85
	COMMA  shift 86
	CONS  shift 87
	.  error


state 45
	expression : LET REC . declaration groupe_decla expr_seq  (29)

	VAR  shift 35
	UNIT  shift 36
	UNDERSCORE  shift 37
	EMPTYLIST  shift 38
	.  error

	declaration  goto 98
	motif  goto 47


state 46
	expression : LET declaration . groupe_decla expr_seq  (28)

	IN  shift 99
	DSCOLON  shift 100
	.  error

	groupe_decla  goto 101


state 47
	motif : motif . COMMA motif  (48)
	motif : motif . CONS motif  (52)
	declaration : motif . corps_func  (70)
	declaration : motif . EQ expression  (71)

	VAR  shift 35
	EQ  shift 102
	UNIT  shift 36
	UNDERSCORE  shift 37
	COMMA  shift 92
	EMPTYLIST  shift 38
	CONS  shift 93
	.  error

	motif  goto 39
	corps_func  goto 103


state 48
	expression : expression . PLUS expression  (12)
	expression : expression . TIMES expression  (13)
	expression : expression . MINUS expression  (14)
	expression : expression . DIV expression  (15)
	expression : expression . MOD expression  (16)
	expression : expression . L expression  (18)
	expression : expression . LE expression  (19)
	expression : expression . G expression  (20)
	expression : expression . GE expression  (21)
	expression : expression . EQ expression  (22)
	expression : expression . NE expression  (23)
	expression : expression . OR expression  (24)
	expression : expression . AND expression  (25)
	expression : NOT expression .  (26)
	expression : expression . REVAL expression  (30)
	expression : expression . COMMA expression  (31)
	expression : expression . CONS expression  (44)

	PLUS  shift 72
	TIMES  shift 73
	MINUS  shift 74
	DIV  shift 75
	MOD  shift 76
	COMMA  shift 86
	RPAREN  reduce 26
	END  reduce 26
	EOF  reduce 26
	L  reduce 26
	LE  reduce 26
	G  reduce 26
	GE  reduce 26
	NE  reduce 26
	EQ  reduce 26
	THEN  reduce 26
	ELSE  reduce 26
	IN  reduce 26
	AND  reduce 26
	OR  reduce 26
	FLECHE  reduce 26
	SCOLON  reduce 26
	DSCOLON  reduce 26
	REVAL  reduce 26
	WITH  reduce 26
	PIPE  reduce 26
	RLIST  reduce 26
	CONS  reduce 26


state 49
	sexpr : INT .  (56)

	.  reduce 56


state 50
	sexpr : VAR .  (55)

	.  reduce 55


state 51
	sexpr : LPAREN . expr_seq RPAREN  (54)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	LPAREN  shift 6
	BEGIN  shift 7
	IF  shift 8
	LET  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NOT  shift 12
	PRINT  shift 13
	FUN  shift 14
	UNIT  shift 15
	REF  shift 16
	EXCL  shift 17
	E  shift 18
	RAISE  shift 19
	TRY  shift 20
	MATCH  shift 21
	INCR  shift 22
	DECR  shift 23
	FST  shift 24
	SND  shift 25
	LLIST  shift 26
	EMPTYLIST  shift 27
	.  error

	expr_seq  goto 104
	expression  goto 31
	sexpr  goto 32
	func  goto 33
	applic  goto 34


state 52
	sexpr : TRUE .  (57)

	.  reduce 57


state 53
	sexpr : FALSE .  (58)

	.  reduce 58


state 54
	sexpr : UNIT .  (60)

	.  reduce 60


state 55
	sexpr : EXCL . sexpr  (59)

	INT  shift 49
	VAR  shift 50
	LPAREN  shift 51
	TRUE  shift 52
	FALSE  shift 53
	UNIT  shift 54
	EXCL  shift 55
	.  error

	sexpr  goto 105


state 56
	expression : PRINT sexpr .  (41)

	.  reduce 41


state 57
	func : FUN corps_func .  (62)

	.  reduce 62


state 58
	expression : REF sexpr .  (36)

	.  reduce 36


state 59
	expression : EXCL sexpr .  (35)
	sexpr : EXCL sexpr .  (59)

	INT  reduce 59
	VAR  reduce 59
	PLUS  reduce 35
	TIMES  reduce 35
	MINUS  reduce 35
	DIV  reduce 35
	MOD  reduce 35
	LPAREN  reduce 59
	RPAREN  reduce 35
	END  reduce 35
	EOF  reduce 35
	L  reduce 35
	LE  reduce 35
	G  reduce 35
	GE  reduce 35
	NE  reduce 35
	EQ  reduce 35
	THEN  reduce 35
	ELSE  reduce 35
	IN  reduce 35
	TRUE  reduce 59
	FALSE  reduce 59
	AND  reduce 35
	OR  reduce 35
	FLECHE  reduce 35
	SCOLON  reduce 35
	DSCOLON  reduce 35
	UNIT  reduce 59
	EXCL  reduce 59
	REVAL  reduce 35
	WITH  reduce 35
	PIPE  reduce 35
	COMMA  reduce 35
	RLIST  reduce 35
	CONS  reduce 35


state 60
	expression : expression . PLUS expression  (12)
	expression : expression . TIMES expression  (13)
	expression : expression . MINUS expression  (14)
	expression : expression . DIV expression  (15)
	expression : expression . MOD expression  (16)
	expression : expression . L expression  (18)
	expression : expression . LE expression  (19)
	expression : expression . G expression  (20)
	expression : expression . GE expression  (21)
	expression : expression . EQ expression  (22)
	expression : expression . NE expression  (23)
	expression : expression . OR expression  (24)
	expression : expression . AND expression  (25)
	expression : expression . REVAL expression  (30)
	expression : expression . COMMA expression  (31)
	expression : E expression .  (32)
	expression : expression . CONS expression  (44)

	COMMA  shift 86
	PLUS  reduce 32
	TIMES  reduce 32
	MINUS  reduce 32
	DIV  reduce 32
	MOD  reduce 32
	RPAREN  reduce 32
	END  reduce 32
	EOF  reduce 32
	L  reduce 32
	LE  reduce 32
	G  reduce 32
	GE  reduce 32
	NE  reduce 32
	EQ  reduce 32
	THEN  reduce 32
	ELSE  reduce 32
	IN  reduce 32
	AND  reduce 32
	OR  reduce 32
	FLECHE  reduce 32
	SCOLON  reduce 32
	DSCOLON  reduce 32
	REVAL  reduce 32
	WITH  reduce 32
	PIPE  reduce 32
	RLIST  reduce 32
	CONS  reduce 32


state 61
	expression : expression . PLUS expression  (12)
	expression : expression . TIMES expression  (13)
	expression : expression . MINUS expression  (14)
	expression : expression . DIV expression  (15)
	expression : expression . MOD expression  (16)
	expression : expression . L expression  (18)
	expression : expression . LE expression  (19)
	expression : expression . G expression  (20)
	expression : expression . GE expression  (21)
	expression : expression . EQ expression  (22)
	expression : expression . NE expression  (23)
	expression : expression . OR expression  (24)
	expression : expression . AND expression  (25)
	expression : expression . REVAL expression  (30)
	expression : expression . COMMA expression  (31)
	expression : RAISE expression .  (33)
	expression : expression . CONS expression  (44)

	COMMA  shift 86
	PLUS  reduce 33
	TIMES  reduce 33
	MINUS  reduce 33
	DIV  reduce 33
	MOD  reduce 33
	RPAREN  reduce 33
	END  reduce 33
	EOF  reduce 33
	L  reduce 33
	LE  reduce 33
	G  reduce 33
	GE  reduce 33
	NE  reduce 33
	EQ  reduce 33
	THEN  reduce 33
	ELSE  reduce 33
	IN  reduce 33
	AND  reduce 33
	OR  reduce 33
	FLECHE  reduce 33
	SCOLON  reduce 33
	DSCOLON  reduce 33
	REVAL  reduce 33
	WITH  reduce 33
	PIPE  reduce 33
	RLIST  reduce 33
	CONS  reduce 33


state 62
	expr_seq : expr_seq . SCOLON expr_seq  (4)
	expression : TRY expr_seq . WITH expression FLECHE expr_seq  (34)

	SCOLON  shift 71
	WITH  shift 106
	.  error

